--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,29 @@ on:
       - dev
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+      
+      - name : Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: react-build
+          path: build/
+
   test:
     runs-on: ubuntu-latest
     steps:
@@ -29,8 +52,39 @@ jobs:
         run: npm run lint
 
   deploy:
-    needs: test
     runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'
     steps:
-      - name: Deploy to Vercel
-        run: echo "Déploiement en cours (ajoute Vercel plus tard)"
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name : Install artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: react-build
+          path: build/
+
+      - name: Connexion DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & Push Docker frontend image
+        run: |
+          docker build -t inesbrm1/uniconnect-frontend:latest .
+          docker push inesbrm1/uniconnect-frontend:latest
+
+      - name: Deploy to VPS
+        uses: appleboy/ssh-action@v0.1.0
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_PRIVATE_KEY }}
+          script: |
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            cd /var/www
+            docker pull inesbrm1/uniconnect-frontend:latest
+            docker compose down
+            docker compose up -d --build --remove-orphans
