--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,9 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_PRIVATE_KEY }}
           script: |
+            echo "------- ${{ secrets.VPS_PRIVATE_KEY }}"
+            echo "------- ${{ secrets.VPS_HOST }}"
+            echo "------- ${{ secrets.VPS_USER }}"
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www
             docker pull inesbrm1/uniconnect-frontend:latest
