--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,11 +81,8 @@ jobs:
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_PRIVATE_KEY }}
+          password: ${{ secrets.VPS_PASSWORD }}
           script: |
-            echo "------- ${{ secrets.VPS_PRIVATE_KEY }}"
-            echo "------- ${{ secrets.VPS_HOST }}"
-            echo "------- ${{ secrets.VPS_USER }}"
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www
             docker pull inesbrm1/uniconnect-frontend:latest
