--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
+    "lucide-react": "^0.536.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
