--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.536.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
