--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build project
         run: npm run build
       
-      - name : Upload build artifacts
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: react-build
@@ -59,7 +59,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name : Install artifacts
+      - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: react-build
@@ -71,10 +71,21 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Définir TAG et SERVICE en fonction de la branche
+        id: vars
+        run: |
+          if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
+            echo "TAG=prod" >> $GITHUB_ENV
+            echo "SERVICE=frontend" >> $GITHUB_ENV
+          elif [[ "${GITHUB_REF}" == "refs/heads/dev" ]]; then
+            echo "TAG=preprod" >> $GITHUB_ENV
+            echo "SERVICE=frontend-preprod" >> $GITHUB_ENV
+          fi
+
       - name: Build & Push Docker frontend image
         run: |
-          docker build -t inesbrm1/uniconnect-frontend:latest .
-          docker push inesbrm1/uniconnect-frontend:latest
+          docker build -t inesbrm1/uniconnect-frontend:${TAG} .
+          docker push inesbrm1/uniconnect-frontend:${TAG}
 
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v0.1.0
@@ -85,6 +96,5 @@ jobs:
           script: |
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             cd /var/www
-            docker pull inesbrm1/uniconnect-frontend:latest
-            docker compose down
-            docker compose up -d --build --remove-orphans
+            docker pull inesbrm1/uniconnect-frontend:${TAG}
+            docker compose up -d --no-deps --build ${SERVICE}
