--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,8 +118,9 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PASSWORD }}
+          envs: TAG,SERVICE,DOCKER_USERNAME,DOCKER_PASSWORD
           script: |
-            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
             cd /var/www
-            docker pull inesbrm1/uniconnect-frontend:${TAG}
-            docker compose up -d --no-deps --force-recreate ${SERVICE}
+            docker compose pull $SERVICE
+            docker compose up -d --no-deps --force-recreate $SERVICE
